--- a/app/src/main/res/layout/activity_formulario_aluno.xml
+++ b/app/src/main/res/layout/activity_formulario_aluno.xml
@@ -9,6 +9,34 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="225dp">
+
+            <ImageView
+                android:id="@+id/usuario_foto"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:src="@drawable/person"
+                android:background="#00A8EC"
+                />
+
+            <Button
+                android:id="@+id/forumario_botao_foto"
+                android:layout_width="56dp"
+                android:layout_height="56dp"
+                android:layout_marginRight="10dp"
+                android:elevation="7dp"
+                android:background="@drawable/fundo_foto"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentRight="true"
+                />
+
+
+        </RelativeLayout>
+
+
+
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
